--- a/StockUp/Base.lproj/Main.storyboard
+++ b/StockUp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -30,7 +30,7 @@
                                 <rect key="frame" x="75" y="123" width="171" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GWv-JC-zGW">
                                 <rect key="frame" x="123" y="258" width="74" height="51"/>
@@ -49,6 +49,7 @@
                                 <state key="normal" title="Sign Up"/>
                                 <connections>
                                     <action selector="signupButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M6Y-gk-XMi"/>
+                                    <segue destination="g2D-py-dKK" kind="modal" identifier="signupSegue" id="mpb-i9-P5e"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -127,7 +128,7 @@
                                 <rect key="frame" x="54" y="174" width="212" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Name" textAlignment="natural" minimumFontSize="17" id="XYG-V2-rIz">
                                 <rect key="frame" x="54" y="212" width="212" height="30"/>
@@ -150,6 +151,15 @@
                                 </state>
                                 <connections>
                                     <action selector="createaccountButton:" destination="g2D-py-dKK" eventType="touchUpInside" id="Msw-EM-1Ft"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ciC-Og-dDQ">
+                                <rect key="frame" x="19" y="20" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButton:" destination="g2D-py-dKK" eventType="touchUpInside" id="YT3-j8-Tgc"/>
+                                    <segue destination="BYZ-38-t0r" kind="modal" identifier="onCancel" id="T66-MU-wOf"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -191,5 +201,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="hqb-3R-fuM"/>
+        <segue reference="T66-MU-wOf"/>
     </inferredMetricsTieBreakers>
 </document>
